// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData process.browser is false getInitialProps with token 1`] = `
Object {
  "cache": Object {
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": false,
        "id": "User:10",
        "type": "id",
      },
    },
    "User:10": Object {
      "__typename": "User",
      "id": "10",
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps with token 2`] = `
Array [
  Array [
    "/graphql",
    Object {
      "body": "{\\"operationName\\":null,\\"variables\\":{},\\"query\\":\\"{\\\\n  me {\\\\n    id\\\\n    __typename\\\\n  }\\\\n}\\\\n\\"}",
      "credentials": "same-origin",
      "headers": Object {
        "accept": "*/*",
        "authorization": "key of token",
        "content-type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`withData process.browser is false getInitialProps without token 1`] = `
Object {
  "cache": Object {
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": false,
        "id": "User:10",
        "type": "id",
      },
    },
    "User:10": Object {
      "__typename": "User",
      "id": "10",
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps without token 2`] = `
Array [
  Array [
    "/graphql",
    Object {
      "body": "{\\"operationName\\":null,\\"variables\\":{},\\"query\\":\\"{\\\\n  me {\\\\n    id\\\\n    __typename\\\\n  }\\\\n}\\\\n\\"}",
      "credentials": "same-origin",
      "headers": Object {
        "accept": "*/*",
        "content-type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`withData process.browser is false successfully render 1`] = `
<WithData(Apollo(App))
  cache={Object {}}
>
  <ApolloProvider
    client={
      ApolloClient {
        "cache": InMemoryCache {
          "addTypename": true,
          "config": Object {
            "addTypename": true,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {},
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "watches": Array [
            Object {
              "callback": [Function],
              "optimistic": true,
              "previousResult": [Function],
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 19,
                  "source": Object {
                    "body": "query { me { id } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "variables": undefined,
            },
          ],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": true,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": true,
              "config": Object {
                "addTypename": true,
                "dataIdFromObject": [Function],
                "fragmentMatcher": HeuristicFragmentMatcher {},
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {},
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "watches": Array [
                Object {
                  "callback": [Function],
                  "optimistic": true,
                  "previousResult": [Function],
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "__typename",
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 19,
                      "source": Object {
                        "body": "query { me { id } }",
                        "locationOffset": Object {
                          "column": 1,
                          "line": 1,
                        },
                        "name": "GraphQL request",
                      },
                      "start": 0,
                    },
                  },
                  "variables": undefined,
                },
              ],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {
            "2" => Object {
              "promise": undefined,
              "reject": [Function],
              "resolve": [Function],
            },
          },
          "idCounter": 3,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {},
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "cancel": [Function],
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 19,
                  "source": Object {
                    "body": "query { me { id } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "invalidate": false,
              "invalidated": false,
              "lastRequestId": 2,
              "listeners": Array [
                [Function],
              ],
              "newData": null,
              "observableQuery": ObservableQuery {
                "_subscriber": [Function],
                "isCurrentlyPolling": false,
                "isTornDown": false,
                "observers": Array [
                  Object {
                    "_subscription": Object {
                      "_cleanup": [Function],
                      "_observer": Object {
                        "error": [Function],
                        "next": [Function],
                      },
                    },
                  },
                ],
                "options": Object {
                  "metadata": Object {
                    "reactComponent": Object {
                      "displayName": "Apollo(App)",
                    },
                  },
                  "notifyOnNetworkStatusChange": false,
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 19,
                      "start": 0,
                    },
                  },
                },
                "queryId": "1",
                "queryManager": [Circular],
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": true,
                },
                "shouldSubscribe": true,
                "subscriptionHandles": Array [],
                "variables": Object {},
              },
              "subscriptions": Array [
                Object {
                  "_cleanup": [Function],
                  "_observer": Object {
                    "complete": [Function],
                    "error": [Function],
                    "next": [Function],
                  },
                },
              ],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {
              "1": Object {
                "document": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 19,
                    "source": Object {
                      "body": "query { me { id } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "graphQLErrors": Array [],
                "metadata": Object {
                  "reactComponent": Object {
                    "displayName": "Apollo(App)",
                  },
                },
                "networkError": null,
                "networkStatus": 1,
                "previousVariables": null,
                "queryString": "{
  me {
    id
    __typename
  }
}
",
                "variables": Object {},
              },
            },
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": true,
          },
        },
        "resetStore": [Function],
        "ssrMode": true,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": true,
            "config": Object {
              "addTypename": true,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {},
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "watches": Array [
              Object {
                "callback": [Function],
                "optimistic": true,
                "previousResult": [Function],
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 19,
                    "source": Object {
                      "body": "query { me { id } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "variables": undefined,
              },
            ],
          },
        },
        "version": "2.0.3",
        "watchQuery": [Function],
      }
    }
  >
    <QueryRecyclerProvider>
      <Apollo(App)
        cache={Object {}}
      >
        <App
          cache={Object {}}
          data={
            Object {
              "error": undefined,
              "fetchMore": [Function],
              "loading": true,
              "networkStatus": 1,
              "refetch": [Function],
              "startPolling": [Function],
              "stopPolling": [Function],
              "subscribeToMore": [Function],
              "updateQuery": [Function],
              "variables": Object {},
            }
          }
        >
          <div />
        </App>
      </Apollo(App)>
    </QueryRecyclerProvider>
  </ApolloProvider>
</WithData(Apollo(App))>
`;

exports[`withData process.browser is false when no getInitialProps 1`] = `
Object {
  "cache": Object {},
}
`;

exports[`withData process.browser is true getInitialProps with token 1`] = `
Object {
  "cache": Object {},
  "value": 99,
}
`;

exports[`withData process.browser is true getInitialProps without token 1`] = `
Object {
  "cache": Object {},
  "value": 99,
}
`;

exports[`withData process.browser is true successfully render 1`] = `
<WithData(Apollo(App))
  cache={Object {}}
>
  <ApolloProvider
    client={
      ApolloClient {
        "cache": InMemoryCache {
          "addTypename": true,
          "config": Object {
            "addTypename": true,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {},
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "watches": Array [
            Object {
              "callback": [Function],
              "optimistic": true,
              "previousResult": [Function],
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 19,
                  "source": Object {
                    "body": "query { me { id } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "variables": undefined,
            },
          ],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": false,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": true,
              "config": Object {
                "addTypename": true,
                "dataIdFromObject": [Function],
                "fragmentMatcher": HeuristicFragmentMatcher {},
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {},
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "watches": Array [
                Object {
                  "callback": [Function],
                  "optimistic": true,
                  "previousResult": [Function],
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "__typename",
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 19,
                      "source": Object {
                        "body": "query { me { id } }",
                        "locationOffset": Object {
                          "column": 1,
                          "line": 1,
                        },
                        "name": "GraphQL request",
                      },
                      "start": 0,
                    },
                  },
                  "variables": undefined,
                },
              ],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {
            "2" => Object {
              "promise": undefined,
              "reject": [Function],
              "resolve": [Function],
            },
          },
          "idCounter": 3,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {},
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "cancel": [Function],
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 19,
                  "source": Object {
                    "body": "query { me { id } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "invalidate": false,
              "invalidated": false,
              "lastRequestId": 2,
              "listeners": Array [
                [Function],
              ],
              "newData": null,
              "observableQuery": ObservableQuery {
                "_subscriber": [Function],
                "isCurrentlyPolling": false,
                "isTornDown": false,
                "observers": Array [
                  Object {
                    "_subscription": Object {
                      "_cleanup": [Function],
                      "_observer": Object {
                        "error": [Function],
                        "next": [Function],
                      },
                    },
                  },
                ],
                "options": Object {
                  "metadata": Object {
                    "reactComponent": Object {
                      "displayName": "Apollo(App)",
                    },
                  },
                  "notifyOnNetworkStatusChange": false,
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 19,
                      "start": 0,
                    },
                  },
                },
                "queryId": "1",
                "queryManager": [Circular],
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": false,
                },
                "shouldSubscribe": true,
                "subscriptionHandles": Array [],
                "variables": Object {},
              },
              "subscriptions": Array [
                Object {
                  "_cleanup": [Function],
                  "_observer": Object {
                    "complete": [Function],
                    "error": [Function],
                    "next": [Function],
                  },
                },
              ],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {
              "1": Object {
                "document": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 19,
                    "source": Object {
                      "body": "query { me { id } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "graphQLErrors": Array [],
                "metadata": Object {
                  "reactComponent": Object {
                    "displayName": "Apollo(App)",
                  },
                },
                "networkError": null,
                "networkStatus": 1,
                "previousVariables": null,
                "queryString": "{
  me {
    id
    __typename
  }
}
",
                "variables": Object {},
              },
            },
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": false,
          },
        },
        "resetStore": [Function],
        "ssrMode": false,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": true,
            "config": Object {
              "addTypename": true,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {},
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "watches": Array [
              Object {
                "callback": [Function],
                "optimistic": true,
                "previousResult": [Function],
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 19,
                    "source": Object {
                      "body": "query { me { id } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "variables": undefined,
              },
            ],
          },
        },
        "version": "2.0.3",
        "watchQuery": [Function],
      }
    }
  >
    <QueryRecyclerProvider>
      <Apollo(App)
        cache={Object {}}
      >
        <App
          cache={Object {}}
          data={
            Object {
              "error": undefined,
              "fetchMore": [Function],
              "loading": true,
              "networkStatus": 1,
              "refetch": [Function],
              "startPolling": [Function],
              "stopPolling": [Function],
              "subscribeToMore": [Function],
              "updateQuery": [Function],
              "variables": Object {},
            }
          }
        >
          <div />
        </App>
      </Apollo(App)>
    </QueryRecyclerProvider>
  </ApolloProvider>
</WithData(Apollo(App))>
`;
